# rektoff

capstone/: INSTRUCTIONS.md  SECURITY_REPORT.md  package.json
capstone/tests/: meta-lend-exploits.ts  meta-lend.ts
lecture_8_files/: ACCOUNT_1_VULNERABILITY_ANALYSIS.md  ACCOUNT_2_VULNERABILITY_ANALYSIS.md  ACCOUNT_3_VULNERABILITY_ANALYSIS.md  ACCOUNT_4_VULNERABILITY_ANALYSIS.md
lecture_8_files/account_1/: Anchor.toml  package.json
lecture_8_files/account_1/tests/: account_1.ts
lecture_8_files/account_1_fixed/: Anchor.toml
lecture_8_files/account_1_fixed/tests/: account_1.ts
lecture_8_files/account_2/tests/: account_2.ts
lecture_8_files/account_2_fixed/: Anchor.toml
lecture_8_files/account_2_fixed/tests/: account_2.ts
lecture_8_files/account_3/: Anchor.toml
lecture_8_files/account_3/tests/: account_3.ts
lecture_8_files/account_3_fixed/tests/: account_3.ts
lecture_8_files/account_4/tests/: account_4.ts
lecture_8_files/account_4_fixed/: Anchor.toml
lecture_8_files/account_4_fixed/tests/: account_4.ts
lecture_9_files/: LECTURE_9_VULNERABILITY_ANALYSIS.md
lecture_9_files/exercise_10/: Anchor.toml  package-lock.json
lecture_9_files/exercise_10/tests/: exercise_10.ts
lecture_9_files/exercise_10_fixed/: README.md  package.json
lecture_9_files/exercise_10_fixed/tests/: exercise_10.ts
lecture_9_files/exercise_9/: Anchor.toml  README.md  attacker-wallet.json
lecture_9_files/exercise_9_fixed/: Anchor.toml
lecture_9_files/exercise_9_fixed/programs/exercise_9/: Cargo.toml
lecture_9_files/exercise_9_fixed/programs/exercise_9/src/: lib.rs
(+34 files in other folders)
